# stonewave-sql-udtfs-example

./: .gitignore  Makefile  README.md  gen_func_info.py  gen_version.py  pyproject.toml
example_func/: __init__.py
tests/: example_func_test.py  supported_signature_list.py
tests/applied_table/: left_table.csv
tests/expected_results/: data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv
