[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "example-func"
version = "0.1.0"
description = "example python user defined table function for stonewave service"
authors = [ "Jiangtao Peng <pengjiangtao@yanhuangdata.com>",]
include = [ "example_func/version.py", "example_func/info.toml",]
[[tool.poetry.packages]]
include = "example_func"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
toml = "^0.10.2"
stonewave-sql-udtfs = "^0.4.0"

[tool.pytest.ini_options]
minversion = "6.0"
junit_family = "xunit2"
log_cli = "true"
log_cli_level = "CRITICAL"
log_level = "INFO"
log_format = "%(asctime)s (%(threadName)-10s) %(filename)s:%(lineno)d %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--junitxml=./build/py_table_funcs_pytest_report.xml"
testpaths = [ "tests",]

[tool.poetry.dev-dependencies.black]
version = "^20.8b1"
allow-prereleases = true
